[package]
name = "rushdown-meta"
version = "0.9.5"
edition = "2021"
rust-version = "1.87"
description = "Meta(YAML frontmatter) extension for rushdown markdown parser"
documentation = "https://docs.rs/rushdown-meta"
homepage = "https://github.com/yuin/rushdown-meta"
repository = "https://github.com/yuin/rushdown-meta"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "MIT"
categories = ["text-processing"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'

[features]
default = ["std"]
# std = ["rushdown/default", "rushdown/pp-ast"]
std = ["rushdown/default"]
alloc = []
no-std = ["alloc", "rushdown/no-std"]

[dependencies]
rushdown = { version = "0.13.0", default-features = false}
yaml-peg = "1.0.9"
